--- a/kubernetes/apps/default/sparknova/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sparknova/app/helmrelease.yaml
@@ -79,14 +79,6 @@ spec:
               kyuubi.engineEnv.SPARK_DRIVER_CORES: "2"
               kyuubi.engineEnv.SPARK_EXECUTOR_MEMORY: 2g
               kyuubi.engineEnv.SPARK_EXECUTOR_CORES: "2"
-        pod:
-          nodeSelector:
-            kubernetes.io/arch: amd64
-            #kubernetes.io/hostname: aurora
-      spark-worker-1:
-        type: deployment
-        replicas: 1
-        containers:
           spark-worker-1:
             image:
               repository: docker.io/clarknova9/spark
@@ -103,14 +95,7 @@ spec:
               SPARK_WORKER_MEMORY: 4G
               SPARK_WORKER_CORES: "2"
               SPARK_WORKER_WEBUI_PORT: "8081"
-        pod:
-          nodeSelector:
-            kubernetes.io/arch: amd64
-      spark-worker-2:
-        type: deployment
-        replicas: 1
-        containers:
-          spark-worker-1:
+          spark-worker-2:
             image:
               repository: docker.io/clarknova9/spark
               tag: 3.5.0-scala2.12-v1.0.1@sha256:dc0a6f3ff1a44961f43e655d51394619e8908869f59db51b92765a6cc68d7a07
@@ -126,13 +111,6 @@ spec:
               SPARK_WORKER_MEMORY: 4G
               SPARK_WORKER_CORES: "2"
               SPARK_WORKER_WEBUI_PORT: "8081"
-        pod:
-          nodeSelector:
-            kubernetes.io/arch: amd64
-      spark-worker-3:
-        type: deployment
-        replicas: 1
-        containers:
           spark-worker-3:
             image:
               repository: docker.io/clarknova9/spark
@@ -152,6 +130,76 @@ spec:
         pod:
           nodeSelector:
             kubernetes.io/arch: amd64
+            #kubernetes.io/hostname: aurora
+      # spark-worker-1:
+      #   type: deployment
+      #   replicas: 1
+      #   containers:
+      #     spark-worker-1:
+      #       image:
+      #         repository: docker.io/clarknova9/spark
+      #         tag: 3.5.0-scala2.12-v1.0.1@sha256:dc0a6f3ff1a44961f43e655d51394619e8908869f59db51b92765a6cc68d7a07
+      #       imagePullPolicy: IfNotPresent
+      #       command: ["/opt/spark/bin/spark-class","org.apache.spark.deploy.worker.Worker", "spark://sparknova-spark-master-svc:7077"]
+      #       ports:
+      #         - name: http
+      #           containerPort: 8081
+      #           protocol: TCP
+      #       env:
+      #         SPARK_MODE: worker
+      #         SPARK_MASTER_URL: spark://sparknova-spark-master-svc:7077
+      #         SPARK_WORKER_MEMORY: 4G
+      #         SPARK_WORKER_CORES: "2"
+      #         SPARK_WORKER_WEBUI_PORT: "8081"
+      #   pod:
+      #     nodeSelector:
+      #       kubernetes.io/arch: amd64
+      # spark-worker-2:
+      #   type: deployment
+      #   replicas: 1
+      #   containers:
+      #     spark-worker-1:
+      #       image:
+      #         repository: docker.io/clarknova9/spark
+      #         tag: 3.5.0-scala2.12-v1.0.1@sha256:dc0a6f3ff1a44961f43e655d51394619e8908869f59db51b92765a6cc68d7a07
+      #       imagePullPolicy: IfNotPresent
+      #       command: ["/opt/spark/bin/spark-class","org.apache.spark.deploy.worker.Worker", "spark://sparknova-spark-master-svc:7077"]
+      #       ports:
+      #         - name: http
+      #           containerPort: 8081
+      #           protocol: TCP
+      #       env:
+      #         SPARK_MODE: worker
+      #         SPARK_MASTER_URL: spark://sparknova-spark-master-svc:7077
+      #         SPARK_WORKER_MEMORY: 4G
+      #         SPARK_WORKER_CORES: "2"
+      #         SPARK_WORKER_WEBUI_PORT: "8081"
+      #   pod:
+      #     nodeSelector:
+      #       kubernetes.io/arch: amd64
+      # spark-worker-3:
+      #   type: deployment
+      #   replicas: 1
+      #   containers:
+      #     spark-worker-3:
+      #       image:
+      #         repository: docker.io/clarknova9/spark
+      #         tag: 3.5.0-scala2.12-v1.0.1@sha256:dc0a6f3ff1a44961f43e655d51394619e8908869f59db51b92765a6cc68d7a07
+      #       imagePullPolicy: IfNotPresent
+      #       command: ["/opt/spark/bin/spark-class","org.apache.spark.deploy.worker.Worker", "spark://sparknova-spark-master-svc:7077"]
+      #       ports:
+      #         - name: http
+      #           containerPort: 8081
+      #           protocol: TCP
+      #       env:
+      #         SPARK_MODE: worker
+      #         SPARK_MASTER_URL: spark://sparknova-spark-master-svc:7077
+      #         SPARK_WORKER_MEMORY: 4G
+      #         SPARK_WORKER_CORES: "2"
+      #         SPARK_WORKER_WEBUI_PORT: "8081"
+      #   pod:
+      #     nodeSelector:
+      #       kubernetes.io/arch: amd64
       # jupyter:
       #   type: deployment
       #   replicas: 1
@@ -217,42 +265,6 @@ spec:
             protocol: TCP
             port: 6066
             targetPort: 6066
-      spark-worker-1:
-        controller: spark-worker-1
-        # -- Override the name suffix that is used for this service
-        nameOverride: spark-worker-1-svc
-        # -- Provide additional labels which may be required.
-        labels:
-          app: sparknova
-        ports:
-          spark-worker-1:
-            protocol: TCP
-            port: 8081
-            targetPort: 8081
-      spark-worker-2:
-        controller: spark-worker-2
-        # -- Override the name suffix that is used for this service
-        nameOverride: spark-worker-2-svc
-        # -- Provide additional labels which may be required.
-        labels:
-          app: sparknova
-        ports:
-          spark-worker-2:
-            protocol: TCP
-            port: 8081
-            targetPort: 8081
-      spark-worker-3:
-        controller: spark-worker-3
-        # -- Override the name suffix that is used for this service
-        nameOverride: spark-worker-3-svc
-        # -- Provide additional labels which may be required.
-        labels:
-          app: sparknova
-        ports:
-          spark-worker-2:
-            protocol: TCP
-            port: 8081
-            targetPort: 8081
       jupyter:
         controller: main
         # -- Override the name suffix that is used for this service
